--- a/main.css
+++ b/main.css
@@ -1,67 +1,96 @@
-body {
-  align-content: center;
-  background: lightblue;
-  margin: 0; }
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+:root {
+  --primary-color: blue; }
+
+* {
+  font-family: Nunito;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  outline: none;
+  border: none;
+  box-sizing: border-box; }
+
+html {
+  font-szie: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 6rem;
+  scroll-behavior: smooth;
+  color: black; }
+
+header {
+  position: relative;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 7%; }
+
+header .logo {
+  font-size: 2rem;
+  font-weight: bold; }
+
+header .logo span {
+  color: var(--primary-colorl); }
+
+header .navbar a {
+  font-size: 1.2rem;
+  margin: 0 2.8rem; }
+
+header .navbar a:hover {
+  color: var(--primary-color); }
 
 .search-bar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  background: white;
-  border-radius: 5em;
-  border: solid black;
-  border-width: 2px;
-  height: 2em;
-  width: 25em;
-  padding: .5em 0 .5em 4em;
-  position: relative; }
-
-.search-input {
-  background-color: transparent;
-  border: none;
-  font-size: 1em;
-  width: 25em;
-  height: 2.8em;
-  margin-top: -.5em;
-  margin-left: -5.5em;
-  position: absolute; }
-
-.search-input:focus {
-  font-size: 1em;
-  outline: none !important;
-  width: 25em;
-  height: 4em;
-  margin-top: -1em;
   position: absolute;
-  background-color: transparent; }
+  top: 20%;
+  left: 25%;
+  right: 0;
+  background-color: white;
+  border: black 1px solid;
+  border-radius: 5rem;
+  padding: .5rem 2rem;
+  width: 50%;
+  display: flex; }
 
-.glasses {
-  clear: both;
-  width: 58%;
-  height: 58%;
-  display: block;
-  float: left;
-  margin-left: -9.5em;
-  margin-top: .5em; }
+.search-bar #search-input {
+  width: 100%;
+  padding: .8rem 1rem;
+  background-color: transparent;
+  border-radius: 5rem;
+  color: #333;
+  font-size: 1.5rem; }
 
-.content {
-  margin-top: 5em;
-  text-align: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 10%;
-  justify-content: space-between; }
-  .content table {
-    border-collapse: collapse;
-    border-spacing: 0 0;
-    border: solid blue 1px;
-    margin-left: 5%; }
-    .content table th {
-      background-color: blue;
-      height: 2em;
-      color: white;
-      border: #A1A1A1	1px solid; }
+.search-bar #search-icon {
+  margin-top: 1rem;
+  width: 5%; }
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+#bg-img {
+  width: 100%;
+  height: 10%; }
+
+#signup {
+  border-radius: 5rem;
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: bold;
+  padding: .5rem .9rem; }
+
+#signup:hover {
+  background-color: lightblue; }
+
+section .shows {
+  display: grid;
+  grid-template-columns: 27% 27% 27%; }
+
+.content img {
+  width: 50px;
+  height: 50px; }
 
 /*# sourceMappingURL=main.css.map */
