--- a/styles/main.css
+++ b/styles/main.css
@@ -1,44 +1,64 @@
-*{
-	margin: 0;
-	padding: 0;
-	margin: 5px 5px;
-}
-
-
 .thumbnail{
-	margin-top: 20px;
+	
 	width: 300px;
 }
 
-.search-bar{
-	font-size: 20px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-	border: none;
-	border-radius: 5em;
-	padding: 5px 10px;
-	display: block;
+.container{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-row-gap: 40px;
+	grid-column-gap: 16px;
 }
 
 div.video-preview{
-	margin-right: 15px;
-	width: 300px;
-	display: inline-block;
 	vertical-align: top;
 }
 
+.thumbnail{
+	width: 100%;
+}
+
+.vertical1{
+	margin-bottom: 12px;
+
+}
+
+.vertical2{
+	display: grid;
+	grid-template-columns: 40px 1fr;
+}
+
 div.channel-picture{
-	display: inline-block;
-	width: 50px;
 	vertical-align: top;
+	border-radius: 50%;
+
 }
 
 .channel-picture img{
 	width: 100%;
 	border-radius: 50%;
+
 }
 
 div.video-info{
 	display: inline-block;
 	width: 200px;
 	vertical-align: top;
+
+	margin-left: 10px;
+}
+
+.video-title{
+	line-height: 20px;
+	margin-bottom: 10px;
+	font-weight: 500;
+}
+
+.video-aurthor, .video-stats{
+	font-size: 15px;
+	color: rgb(96, 96, 96);
+}
+
+.video-aurthor{
+	margin-bottom: 4px;
 }
