--- a/styles/general.css
+++ b/styles/general.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
 *{
-
 	margin: 0;
-	padding: 0;
-	
+	padding: 0;	
 }
 
 body{
-
+	background-color: #F7F7F7;
+	padding-top: 70px;
+	padding-left: 220px;
 	font-family: Roboto;
+	margin-bottom: 1000px;
 }
