--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,14 @@
 .header{
 	display: flex;
+	position: fixed;
+	top: 0; left: 0; right: 0;
 	height: 55px;
+	background-color: white;
 	align-items: stretch;
 	justify-content: space-between;
+	box-shadow: 5px 0px 5px rgba(246, 246, 246, 0.5);
+	border-bottom: #C4C4C4 1px solid;
+	z-index: 1;
 }
 
 .left{
@@ -21,14 +27,26 @@
 }
 
 .right{
+	margin-right: 20px;
 	width: 200px;
-	background-color: lightpink;
+	flex-shrink: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.right img{
+	width: 25px;
+}
+
+.right .icon {
+	width: 35px;
+	border-radius: 50%;
 }
 
 .middle{
 
 	flex: 1;
-	background-color: lightgreen;
 	margin-left: 40px;
 	margin-right: 30px;
 	max-width: 500px;
@@ -37,45 +55,116 @@
 	justify-content: center;
 }
 
-.bar{
-	display: flex;
-	
+.tooltip{
+	white-space: nowrap;
+	position: absolute;
+	left: 0;
+	bottom: -30px;
+	background-color: gray;
+	color: white;
+	padding: 4px 8px;
+	opacity: 0;
+	transition: opacity 0.15s;
+	pointer-events: none;
+	z-index: 3;
 }
+
 .search-btn{
-	height: 35px;
-	width: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 45px;
+	height: 40px;
 	background-color: transparent;
 	border: none;
-	border-radius: 50%;
-	background-color: white;
 	cursor: pointer;
-	
+	position: relative;	
+}
+
+.search-btn:hover .tooltip{
+	opacity: 1;
+}
+
+.mic-btn:hover .tooltip{
+	opacity: 1;
 }
 
 .search-btn img{
-	width: 50%;
-	background-color: white;
-	border-radius: 50%;
-	border:  black 2px solid;
+	width: 25px;
+	height: 25px;
+	padding: 6px;
+	background-color: rgba(210, 210, 210, 0.5);
+	border-radius: 50px;
+	transition: background-color .15s;
+	box-shadow: inset 1px 2px 3px rgba(246, 246, 246, 0.08);
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
 }
+
+.search-btn img:hover{
+	background-color: rgba(210, 210, 210, 1);
+	
+
+}
+
+.bell {
+	position: relative;
+}
+.bell .notification{
+	position: absolute;
+	right: -5px; top: -5px;
+	background-color: red;
+	color: white;
+	padding: 2px 6px;
+	font-size: 14px;
+	border-radius: 10px;
+}
+
 .mic-btn{
-	height: 35px;
-	width: 35px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 55px;
+	height: 40px;
+	background-color: transparent;
+	border: none;
 	cursor: pointer;
+	position: relative;
+	
+	
+}
+
+.mic-btn img{
+	width: 25px;
+	height: 25px;
+	padding: 6px;
+	background-color: rgba(210, 210, 210, 0.5);
+	border-radius: 50px;
+	transition: background-color .15s;
+	box-shadow: inset 1px 2px 3px rgba(246, 246, 246, 0.08);
+}
+
+.mic-btn img:hover{
+	background-color: rgba(210, 210, 210, 1);
 }
 
 .search-bar{
-	
+	flex: 1;
+	margin: 0 20px;
 	font-size: 20px;
 	border: none;
 	width: 100%;
+	width: 0;
 	background-color: transparent;
 	padding: 5px 10px;
 	border-radius: 5em;
+	border: 1px gray solid;
 	background-color: white;
+	box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.08);
 }
 
 .search-bar::placeholder{
 	font-family: Roboto;
+	padding-left: 6px;
 
 }
