--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 .thumbnail{
 	
-	width: 300px;
+	width: 100%;
 }
 
 .container{
@@ -10,19 +10,41 @@
 	grid-column-gap: 16px;
 }
 
+@media (max-width: 1000px) {
+	.container{
+	
+		grid-template-columns: 1fr 1fr;
+	
+	}
+}
+@media (min-width: 1500px) {
+	.container{
+	
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	
+	}
+}
+
 div.video-preview{
 	vertical-align: top;
 }
 
-.thumbnail{
-	width: 100%;
-}
+
 
 .vertical1{
 	margin-bottom: 12px;
-
+	position: relative;
 }
 
+.video-time{
+	background-color: black;
+	color: white;
+	position: absolute;
+	bottom: 8px; right: 5px;
+	font-size: 15px;
+	font-weight: 500;
+	padding: 3px;
+}
 .vertical2{
 	display: grid;
 	grid-template-columns: 40px 1fr;
